# fluid

./: Cargo.toml  index.html
src/: buffers.rs  fluid.rs  gui.rs  lib.rs  main.rs  shader.wgsl  state.rs  vertex.rs
