[package]
name = "fluid_euler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fluid_euler_run"
path = "src/main.rs"

[dependencies]
# 共通の依存関係
bytemuck = { version = "1.25.0", features = ["derive"] }
log = "0.4"
winit = "0.30"
cfg-if = "1.0"
wgpu = "22.1.0"
tokio = { version = "1.51", features = ["macros", "rt"] }
pollster = "0.3"
async-lock = "3.4"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
# ネイティブ環境 (Windows, macOS, Linux) 用の依存関係
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"
tokio = { version = "1.51", features = ["rt-multi-thread"] }

# ブラウザ環境 (WebAssembly) 用の依存関係
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "22.1.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
